force-app/main/default/objects/OpportunityLineItem/fields/CPE_NRC_Price_c__c.field-meta.xml
<CustomField>
    <fullName>CPE_NRC_Price_c__c</fullName>
    <label>CPE_NRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>