force-app/main/default/objects/OpportunityLineItem/fields/lineItem__c.field-meta.xml
<CustomField>
    <fullName>lineItem__c</fullName>
    <formula>PricebookEntry.Product2.Item_Code__c</formula>
    <label>lineItem</label>
    <type>Text</type>
</CustomField>