force-app/main/default/objects/OpportunityLineItem/fields/NRC_Price_c__c.field-meta.xml
<CustomField>
    <fullName>NRC_Price_c__c</fullName>
    <label>NRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>