force-app/main/default/objects/OpportunityLineItem/fields/OppLI__c.field-meta.xml
<CustomField>
    <fullName>OppLI__c</fullName>
    <formula>PricebookEntry.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OppLI</label>
    <type>Text</type>
</CustomField>