force-app/main/default/objects/OpportunityLineItem/fields/Quooo__c.field-meta.xml
<CustomField>
    <fullName>Quooo__c</fullName>
    <label>Quooo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>