force-app/main/default/objects/OpportunityLineItem/fields/Renewal_MRC__c.field-meta.xml
<CustomField>
    <fullName>Renewal_MRC__c</fullName>
    <label>Renewal MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>