force-app/main/default/objects/OpportunityLineItem/fields/Term_months__c.field-meta.xml
<CustomField>
    <fullName>Term_months__c</fullName>
    <label>Term(Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>